[package]
name = "audio_rs"
version = "0.0.1"
edition = "2024"
description = "Cross platform audio capturing library for rust(Mac OS/Windows/Linux)"
license = "MIT"
documentation = "https://docs.rs/audio_rs"
homepage = "https://github.com/Sammers21/audio_rs"
repository = "https://github.com/Sammers21/audio_rs"

[dependencies]
